Will add semicolons and fix spacing

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ h2 {
 }
 
 .article__ul--checkboximg {
-  margin-right: 5px
+  margin-right: 5px;
 }
 
 .article__footer--div {
@@ -252,7 +252,7 @@ h2 {
   }
   
   h1 {
-    font-size: 3em
+    font-size: 3em;
   }
 
   .header__div {
